
$Id$

2008-05-23 Karl Lehenbauer
    * Add "escape_bytea" and "unescape_bytea" to the methods that can be
      invoked from $conn.

    * Extend pg_escape_bytea to allow a connection handle to be specified.
      If specified, libpq's PQescapeByteaConn is used rather than
      deprecated PQescapeBytea, which can return incorrect results since
      it can't determine whether standard-conforming strings are enabled.

      If the "$conn escape_bytea ..." method is used, the connection-handle
      version is automatically used.

    * Detect if lo_truncate is available in libpq or not and, if not, return 
      an error if it is attempted.

2008-05-20 Karl Lehenbauer
    * Add support for the lo_truncate function that truncates a large object
      to a given length.

    * Version bump to 1.7.

2007-12-14 Karl Lehenbauer <karl-pg@sc.com>
    * Update autoconf build to Tcl Extension Architecture (TEA) 3.6

    * Extend pg_quote to allow a connection handle to be specified.
      If the connection handle is specified and the string matches the 
      null string, returns "NULL" (without quotes).  If not, returns 
      the string quoted for inclusion in SQL commands.

    * pg_quote can be invoked as a method of the connection handle
      as well.  For instance, "$db quote $string".

    * Removed unused variables and silence compiler warnings with casting.

    * Added "internal_position" and "internal_query" to the error options.

2007-02-08 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added support for async connections. Note that you will have to 
      use [after] command to find the result of the connection. Callbacks
      won't work, since the sock isn't established yet

2007-01-24 Brett Schwarz <brett_schwarz@yahoo.com>
    * added additional sub commands to dbinfo (version, protocol, param,
    backendpid, socket)

2006-07-05 Karl Lehenbauer <karl-pg@sc.com>
    * Updated autoconf build to Tcl Extension Architecture (TEA) 3.5
